Added missing endpoints and tests